# pydi

./: Makefile  README.md  pyproject.toml  setup.py
.github/workflow/: ci.yml
src/pydi/: abstract.py  config.py  container.py  decorator.py  error.py  kernel.py  util.py
tests/: test_container.py  test_kernel.py
tests/test_indexing/: test.py
tests/test_indexing/testing/: cest.py
tests/test_indexing/testing/test/: west.py
